# AGNOS

./: .gitignore  .travis.yml  Doxyfile  Makefile.am  README.md  TODOS  configure.ac  dummy.in
contrib/: install-libmesh.sh
contrib/getpot/: GetPot
contrib/sandia_rules/: sandia_rules.hpp
doxygen/: Makefile.am  agnos.dox  agnos.page  aminclude.am
examples/: Makefile.am
examples/catenary/: Makefile.am  catenary.in  run.sh.in  runCatenary.C
examples/catenaryLibmesh/: Makefile.am  agnos.in  catenaryLibmesh.in  run.sh.in  runCatenaryLibmesh.C
examples/channelFlow/: Makefile.am  Retau_1.0.in  channelFlow.C  channelFlow.in  flow.in  run.sh.in
examples/diffusion/: diffusion.in  run.sh.in
examples/grins/: fat_box_with_hole.e  grins.in  grinsExample.in  plotHist.py  refined_fat_box_with_hole.e  run.sh.in
examples/higherOrderDiffusion/: higherOrderDiffusion.in
examples/viscousBurgers/: Makefile.am  agnos.in  run.sh.in  runViscousBurgers.C  viscousBurgers.in
include/: AdaptiveDriver.h  AssemblyCatenary.h  AssemblyViscousBurgers.h  BurgersSystem.h  CatenaryModel.h  CatenarySystem.h  Collocation.h  CombinedSolutionVector.h  Driver.h  DriverAdaptive.h  DriverFunction.h  DriverPhysics.h  Element.h  JacobianViscousBurgers.h  Makefile.am  Parameter.h  PhysicsAssembly.h  PhysicsCatenary.h  PhysicsCatenaryLibmesh.h  PhysicsChannelFlow.h  PhysicsDiffusion.h  PhysicsFunction.h  PhysicsFunctionCombinedSolutionVector.h  PhysicsFunctionTotalError.h  PhysicsHigherOrderDiffusion.h  PhysicsJacobian.h  PhysicsLibmesh.h  PhysicsModel.h  PhysicsModelCatenary.h  PhysicsModelViscousBurgers.h  PhysicsQoi.h  PhysicsQoiDerivative.h  PhysicsResidual.h  PhysicsUser.h  PhysicsViscousBurgers.h  PseudoSpectral.h  PseudoSpectralMonteCarlo.h  PseudoSpectralSparseGrid.h  PseudoSpectralTensorProduct.h  QoiCatenary.h  (+19 more)
include/physics/: BurgersSystem.h  DiffusionSystem.h  PhysicsCatenary.h  PhysicsChannelFlow.h  PhysicsDiffusion.h  PhysicsGrins.h  PhysicsLibmesh.h  PhysicsModel.h  PhysicsViscousBurgers.h
include/surrogate/: EvaluatorPseudoSpectral.h  Parameter.h  PseudoSpectralSparseGrid.h  PseudoSpectralTensorProduct.h  QuadratureTensorProduct.h  SurrogateEvaluator.h  SurrogateModel.h  SurrogateModelBase.h  SurrogatePseudoSpectral.h
m4/: config_summary.m4
m4/.svn/: all-wcprops  dir-prop-base  entries
m4/.svn/text-base/: config_summary.m4.svn-base
m4/common/: ax_trilinos_epetra.m4  grins.m4  hdf5_new.m4  masa.m4  queso_new.m4
m4/common/.svn/: all-wcprops  entries
m4/common/.svn/text-base/: ax_fc_minopt.m4.svn-base  ax_python_devel.m4.svn-base  ax_trilinos_base.m4.svn-base  chemay.m4.svn-base  config_environment.m4.svn-base  coverage.m4.svn-base  grvy.m4.svn-base  grvy_new.m4.svn-base  gsl_new.m4.svn-base  hdf5.m4.svn-base  hdf5_new.m4.svn-base  iMut.m4.svn-base  masa.m4.svn-base  pecos_ablation.m4.svn-base  pecos_ablation_new.m4.svn-base  pecos_radiation.m4.svn-base  queso_new.m4.svn-base  unordered.m4.svn-base
matlab/: adaptive_wrapper_higherDimension.m  sample_input_navierstokes.m  updateElements_reuse.m
src/: Driver.C  Element.C  Makefile.am  PhysicsModel.C  SurrogateModel.C  ViscousBurgersPhysics.C  agnos.C  agnosDefines.C  ioHandler.C  run.C
src/physics/: PhysicsCatenary.C  PhysicsCatenaryLibmesh.C  PhysicsChannelFlow.C  PhysicsDiffusion.C  PhysicsGrins.C  PhysicsLibmesh.C  PhysicsUser.C  PhysicsViscousBurgers.C
src/surrogate/: EvaluatorPseudoSpectral.C  Parameter.C  PseudoSpectralTensorProduct.C  QuadratureRule.C  QuadratureTensorProduct.C  SurrogateEvaluator.C  SurrogateModel.C  SurrogateModelBase.C  SurrogatePseudoSpectral.C
test/: CatenaryTest.cpp  ChannelTest.C  ChannelTest.sh.in  DriverTest.C  DriverTest.sh.in  ElementTest.cpp  EvaluationTest.cpp  EvaluatorTest.C  EvaluatorTest.sh.in  GrinsTest.C  GrinsTest.sh.in  LibmeshCatenaryTest.cpp  LibmeshTest.C  LibmeshTest.sh.in  Makefile.am  ParallelCatenary.cpp  PolynomialTest.cpp  ViscousBurgersTest.cpp  catenaryLibmeshTest.sh.in  catenaryTest.sh  catenaryTest.sh.in  driver.C  driver.in  elementTest.sh.in  evaluationTest.sh  evaluationTest.sh.in  exampleTest.cpp  flow.in  grins.in  hdf5Test.C  hdf5Test.sh.in  libmeshTests.C  parallelCatenary.sh  parallelCatenary.sh.in  polynomialTest.sh  polynomialTest.sh.in  testDriver.C  viscousBurgersTest.sh.in
